--- a/src/app/components/network/network/network.component.html
+++ b/src/app/components/network/network/network.component.html
@@ -1,4 +1,6 @@
 <app-header class="red" title="Netwerk"></app-header>
+  <app-notification [notif]=room></app-notification>
+
 <div (click)='closeSearch()'>
   <div class="container">
     <!-- <div class="contacts">
