--- a/src/app/components/network/network/network.component.scss
+++ b/src/app/components/network/network/network.component.scss
@@ -5,7 +5,7 @@
 
 .conversations {
   position: absolute;
-  top: 100px;
+  top: 140px;
 }
 
 #defaultCanvas0 {
@@ -26,4 +26,11 @@
     width: 32.64%;
     left: 8.41%;
   }
+}
+
+app-notification{
+  width: 100vw;
+  position: absolute;
+  top: 60px;
+  height: 60px;
 }
