--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -54,6 +54,9 @@ a {
 }
 
 @media only screen and (min-width: 769px) {
+  app-notification{
+    z-index: 0;
+  }
   ul {
     grid-column: 2/ span 3;
     scroll-behavior: smooth;
@@ -96,6 +99,7 @@ a {
   }
 
   .event-detail {
+    z-index: 1;
     grid-column: 5/ span 7;
     grid-row: 4/ span 3;
     margin: 0;
@@ -113,10 +117,11 @@ a {
   .container-grid {
     background-image: url("../../../assets/images/fablabCloseUp3.png");
     background-size: cover;
+    z-index: -1;
   }
 
   ul {
-
+    z-index: 1;
     grid-column: 2/ span 3;
     grid-row: 4/ span 3;
     margin: 0;
@@ -210,3 +215,4 @@ a {
     display: none;
   }
 }
+
