--- a/src/app/components/livestream/livechat/livechat.component.html
+++ b/src/app/components/livestream/livechat/livechat.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="chat$ | async as chat">
 <div class="container ">
-    <div class="messages" id="livechat-container" #scrollframe>
+    <div class="messages" id="livechat-container">
     <article class="wrapper flex row flex-start">
       <!-- <section class="left users flex row w-30">
         <aside>
@@ -9,7 +9,7 @@
       </!-->
 
       <article class="">
-        <div #chatBox class="chat right " id="chat" >
+        <div class="chat right">
           <div id="livechat-scroll" class="msg animated zoomInUp" *ngFor="let msg of chat.messages; trackBy: trackByCreated">
             <article *ngIf="msg.hand !== true;" class="text-msg">
                   <p>
@@ -31,9 +31,9 @@
 
     </article>
     </div>
-    <div class="userinput">
-      <div class="clap">
-        <img src="assets/images/theclap.svg" alt="" (click)="submitHand(chat.id)">
+    <div class="userinput" id="livechat-userinput">
+      <div class="clap" (click)="submitHand(chat.id)">
+        👏
       </div>
       <div class="message" *ngIf="auth.user$ | async; else login">
         <input type="text" (keydown.enter)="submit(chat.id)"
