--- a/src/app/components/livestream/livechat/livechat.component.scss
+++ b/src/app/components/livestream/livechat/livechat.component.scss
@@ -20,18 +20,21 @@
   border-left: 5px solid $green;
 }
 
+#livechat-userinput{
+  height: 10%;
+}
 
-
+.clap{
+  font-size: 1.3em;
+  cursor: pointer;
+}
 
 #livechat-container{
   scroll-behavior: smooth;
+  min-height: 90%;
+  max-height: 90%;
+  overflow: scroll;
 }
-
-
-
-
-
-
 
 .container::-webkit-scrollbar{
   display:none;
@@ -43,6 +46,7 @@
   align-content: stretch;
   overflow-x: hidden;
   position: relative;
+  height: 100%;
   // align-items: stretch;
   .messages{
     width: 100%;
@@ -66,6 +70,7 @@
     bottom: 0;
     background: white;
     .send,.clap{
+      cursor: pointer;
        display: flex;
        align-items: center;
         width: 10%;
@@ -74,20 +79,24 @@
     .message{
         display: flex;
         align-items: center;
+        width: 100%;
         height: 100%;
+        margin: 0 5%;
 
       input {
-        padding: 0.5em 3em;
+        padding-left: 7%;
         width: 100%;
+        height: 70%;
         border: none;
         box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
-        width: 100%;
         background:#F0F0F0;
     }
     }
 
   }
 }
+
+
 
 .text-msg, .clap-msg{
   width: 100%;
@@ -100,20 +109,9 @@
   padding-right: 0.5em;
 }
 
-
-
-
-
-
-
-
-
-
-
 //mobile
 @media only screen and (max-width: 768px) {
   .container{
-    max-height: 50vh;
     position: static;
   }
   .userinput{
@@ -130,13 +128,10 @@
 //desktop
 @media only screen and (min-width: 768px) {
   .container{
-    max-height: 60vh;
     position: static;
   }
   .userinput{
     width: 100%;
-    padding-top: 1em;
-    padding-bottom: 1em;
   }
 }
 
