--- a/src/styles.scss
+++ b/src/styles.scss
@@ -311,4 +311,15 @@ app-notification{
 
 }
 
+.go-to-profile:hover{
+  cursor: pointer;
+  opacity: 0.5;
+}
 
+
+.go-to-profile-black:hover{
+  cursor: pointer;
+  color: black !important;
+  opacity: 1;
+  text-decoration: underline;
+}
