--- a/src/app/components/network/chat/chat.component.scss
+++ b/src/app/components/network/chat/chat.component.scss
@@ -239,10 +239,13 @@
     height: calc(100% - 60px);
     padding: 1em 1em 1em 0;
     justify-content: flex-end;
+    background-color: white;
   }
   .backgroundImageNetwork{
       grid-column: 1/ span 12;
       grid-row: 2/ span 6;
+      background-image: url('../../../../assets/images/background.png');
+        z-index: -1;
   }
   .chat{
     direction: rtl;
@@ -289,8 +292,9 @@
 #desktopHeader, .chat-title-header{
   display: none;
 }
+
 .backgroundImageNetwork{
-    display:none;
+  display: none;
 }
 
 }
