--- a/src/app/components/inbox/inbox.component.scss
+++ b/src/app/components/inbox/inbox.component.scss
@@ -1,3 +1,6 @@
+@import '~src/styles.scss';
+
+
 .inbox-container {
   background-color: white;
   width: 100vw;
@@ -54,7 +57,7 @@
 .conversation {
   display: flex;
   height: 10vh;
-
+  align-items: center;
   img {
     width: 10%;
     margin: 0em 1em 0em 0em;
@@ -68,6 +71,21 @@
     .namestatus {
       width: 100%;
 
+.docent {
+  background: $pink;
+}
+
+.student {
+  background: $blue;
+}
+
+.alumni {
+  background: $red;
+}
+
+.bedrijf {
+  background: $green;
+}
       // p {
       //   font-weight: 400;
       // }
