--- a/src/app/components/network/room/room.component.html
+++ b/src/app/components/network/room/room.component.html
@@ -155,7 +155,7 @@
       </article>
 
     </article>
-    <div [routerLink]= "'/network'" class="backgroundImageNetwork"></div>
+    <div routerLink= "/network" class="backgroundImageNetwork"></div>
   </div>
   </ng-container>
 </ng-container>
