--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -178,7 +178,7 @@
       </article>
 
     </article>
-    <div [routerLink]= "'/network'" class="backgroundImageNetwork"></div>
+    <div routerLink= "/network" class="backgroundImageNetwork"></div>
   </div>
   </ng-container>
 </ng-container>
