--- a/src/app/components/network/room/room.component.scss
+++ b/src/app/components/network/room/room.component.scss
@@ -243,8 +243,9 @@
   .backgroundImageNetwork{
       grid-column: 1/ span 12;
       grid-row: 2/ span 6;
-        background-image: url('../../../../assets/images/background.png');
-        z-index: -1;
+      background-image: url('../../../../assets/images/background.png');
+      z-index: 0;
+      cursor: pointer;
   }
   .chat{
     direction: rtl;
@@ -278,6 +279,7 @@
     }
     .wrapper{
       width: 100%;
+      z-index: 1;
     }
 }
 
