--- a/src/app/components/inbox/inbox.component.html
+++ b/src/app/components/inbox/inbox.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="auth.user$ | async as user">
   <div class="inbox-container">
-    <div class="conversation profileBtn" routerLink='/editprofile' [routerLinkActive]="['display-none']">
+    <div class="conversation profileBtn" routerLink='/profile' [routerLinkActive]="['display-none']">
       <img src="assets/edit.svg" alt="" id="editImg">
       <p>Bewerk profiel</p>
     </div>
