--- a/src/app/components/network/room/room.component.html
+++ b/src/app/components/network/room/room.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="chat$ | async as chat">
   <ng-container *ngIf=" auth.user$ | async as user">
-    <app-header class="red" back="false" title="Groepschat" id="desktopHeader"></app-header>
+    <app-header class="red" back="false" title="Netwerk" id="desktopHeader"></app-header>
     <div class="container-grid">
     <app-header class="red" back='true' title="{{chat.roomName}}" id="mobileHeader"></app-header>
     <!-- <div class="top">
@@ -86,7 +86,7 @@
               <article>
                 <div>
                   <div class="flex space-between">
-                    <span class="go-to-profile-black tag is-dark" [routerLink]="'/profile/' + msg.user.uid">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
                     <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                   </div>
                   <p>{{ msg.content }}</p>
@@ -101,7 +101,7 @@
                 </div> -->
                 <div>
                   <div class="flex space-between">
-                    <span class="go-to-profile-black tag is-dark" [routerLink]="'/profile/' + msg.user.uid">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
                     <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                   </div>
                   <p>{{ msg.content }}</p>
@@ -114,7 +114,7 @@
                 <article>
                   <div>
                     <div class="flex space-between">
-                      <span class="go-to-profile-black tag is-dark" [routerLink]="'/profile/' + msg.user.uid">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                      <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
                       <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                     </div>
                     <p>👏</p>
