--- a/src/app/components/network/network/network.component.html
+++ b/src/app/components/network/network/network.component.html
@@ -1,7 +1,7 @@
 <app-header class="red" title="Netwerk"></app-header>
   <app-notification [notif]=room></app-notification>
 
-<div (click)='closeSearch()'>
+<div >
   <div class="container">
     <!-- <div class="contacts">
     <div class="leftside">
@@ -31,9 +31,9 @@
            <div class="bar1"></div>
            <div class="bar2"></div>
          </div> -->
-    <div class="container conversations">
+    <!-- <div class="container conversations">
       <app-conversations (close)=closer></app-conversations>
-    </div>
+    </div> -->
 
     <!-- </div> -->
 
