legende interaction room

--- a/src/app/components/network/network/network.component.html
+++ b/src/app/components/network/network/network.component.html
@@ -3,6 +3,13 @@
 
 <div >
   <div class="container">
+    <div class="legende">
+      <p class="student">student</p>
+      <p class="bedrijf">bedrijf</p>
+      <p class="alumni">alumni</p>
+      <p class="docent">docent</p>
+      <p class= "bezoeker">bezoeker/ouder</p>
+    </div>
     <!-- <div class="contacts">
     <div class="leftside">
       <div class="usercontainer">
