--- a/src/app/components/livestream/livechat/livechat.component.scss
+++ b/src/app/components/livestream/livechat/livechat.component.scss
@@ -1,6 +1,6 @@
 @import '~src/styles.scss';
 //Kleuren balkjes functies
-.docent, .student, .bedrijf, .alumni{
+.docent, .student, .bedrijf, .alumni {
   padding-left: 0.5em;
 }
 
@@ -18,6 +18,53 @@
 
 .bedrijf{
   border-left: 5px solid $green;
+}
+
+.tooltipHover{
+  cursor: pointer;
+}
+
+.tooltipTop {
+  min-width:50px; 
+  top:-20px;
+  left:50%;
+  transform:translate(-50%, -100%);
+  padding:10px 20px;
+  color:#EEEEEE;
+  background-color:#555555;
+  font-weight:normal;
+  font-size:13px;
+  border-radius:8px;
+  position:absolute;
+  z-index:99999999;
+  box-sizing:border-box;
+  box-shadow:0 1px 8px rgba(0,0,0,0.5);
+  display:none;
+}
+
+.tooltipHover:hover + .tooltipTop {
+  display:block;
+}
+
+.tooltipTop i {
+  position:absolute;
+  top:100%;
+  left:50%;
+  margin-left:-12px;
+  width:24px;
+  height:12px;
+  overflow:hidden;
+}
+
+.tooltipTop i::after {
+  content:'';
+  position:absolute;
+  width:12px;
+  height:12px;
+  left:50%;
+  transform:translate(-50%,-50%) rotate(45deg);
+  background-color:#555555;
+  box-shadow:0 1px 8px rgba(0,0,0,0.5);
 }
 
 #livechat-userinput{
