tried to fix chat, couldn't make it happen bois

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,4 +25,4 @@
     </div>
   </section>
 </div>
-<!-- <app-inbox [hidden] = 'toggleInbox'></app-inbox> -->
+<app-inbox [hidden] = 'toggleInbox'></app-inbox>
