--- a/src/app/components/network/network/network.component.html
+++ b/src/app/components/network/network/network.component.html
@@ -39,9 +39,10 @@
            <div class="bar1"></div>
            <div class="bar2"></div>
          </div> -->
-    <div class="container conversations">
+         
+    <!-- <div class="container conversations">
       <app-conversations (close)=closer></app-conversations>
-    </div>
+    </div> -->
 
     <!-- </div> -->
 
